tests/bad/bad-not-type.ris
void main():
    print not 42;
    return;